# rag-api

./: README.md  pyproject.toml
src/rag_api/: __init__.py  app.py
