[project]
name = "rag-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alan Bandeira", email = "alan.p.bandeira@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "rag_api:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag_api"]
